# difference-generator

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg  test.py
.github/workflows/: python-package.yml
gendiff/: __init__.py  create_diff.py  creating_diff.py  dicts_diff.py  gendiff.py  make_gendiff.py  making_gendiff.py  parser.py  test_import.py
gendiff/formatters/: __init__.py  dicts_diff.py  json_m.py  parser.py  plain.py  stylish.py
gendiff/scripts/: create_diff.py  file1.json  file2.json  file6.json  gendiff.py  json_m.py  just.py  make_gendiff.py  parser.py  plain.py  stylish.py
tests/: __init__.py  test_gendiff.py
tests/fixtures/: file2.yaml  file3.json  file3.yaml  file6.yaml  file8.json  output12_json.txt  output34.txt  output34_json.txt  output56.txt  output56_json.txt  output56_plain.txt  output78.txt
